@@ -10,6 +10,7 @@ New Features:
 - Added AVC/h.264 live streaming based on Tiago Jacobs patches
 - Added enums for Audio and Video codec types
 - Added capability to add IoFilters to RTMPConnection per application
+- Added AAC live streaming code based on Vittee Nakka's IceSurf code
 
 Bugfixes:
 - Fixed bug with recording, where meta files were not removed when using the same name
